# pywdog

./: LICENSE  README.md  build_libwdog.py  meson.build  meson.options  noxfile.py  pyproject.toml  test-namespace-wrapper.sh  test_wdog.py  wdog.py
src/: __init__.py  meson.build
subprojects/: .gitignore  watchdogd.wrap
subprojects/packagefiles/watchdogd/: meson.build
tests/: conftest.py  test_wdog.py
